tests/effects-corpus/corpus/reject/r_pattern_handler_missing_op.pdx
// Pattern handler missing operation
module PatternHandlerMissing = structure {
  effect Io {
    op read : (u16) -> u8
    op write : (u16, u8) -> unit
  }

  let pattern_incomplete : (unit) -> unit !{} =
    fn (_ : unit) ->
      with handler handle Io {
        0
      }
}
